# supply-chain-security

./: .gitignore  .pre-commit-config.yaml  .test_env  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  artifact_invalid.md  config.ini  cosign.pub  extract.py  main.py  merkle_proof.py  mock_secrets.txt  personal.txt  pyproject.toml  requirements.txt  secret.txt  util.py
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  scorecard.yml
rektor/: __init__.py  main.py  merkle_proof.py
tests/: test_consistency_invalid_root_hash.py  test_consistency_invalid_root_length.py  test_consistency_invalid_tree-size.py  test_consistency_valid.py  test_inclusion_invalid_artifact-md.py  test_inclusion_invalid_log_index.py  test_inclusion_valid.py  test_main_sane_inavlid_index.py  test_main_sane_index.py  test_main_sane_path_invalid.py  test_main_sane_path_valid.py
