[tool.poetry]
name = "supply-chain-security"
version = "0.1.0"
description = ""
authors = ["Adnan Jakati <mj3184@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
cryptography = "^43.0.3"
truffleHog = "^2.2.1"
pre-commit = "^4.0.1"
mypy = "^1.11"
black = "^24.10.0"
ruff = "^0.7.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
autodocstrings = "^0.1.3"
bandit = "^1.7.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
ruff = "^0.7.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
bandit = "^1.7.10"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
files = ["main.py", "merkle_proof.py", "util.py"]
strict = true

[tool.flake8]
max-line-length = 88

[tool.ruff]
select = ["E", "F", "W"]

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]

[tool.bandit]
targets = ["."]
